log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: shared-log-output
        emptyDir: {}
      containers:
      - name: random-string-generator
        image: berkturetkenwartsila/random_string_generator:0.2
        volumeMounts:
        - name: shared-log-output
          mountPath: /usr/src/app/files
      - name: random-string-provider
        image: berkturetkenwartsila/random_string_provider:0.2
        volumeMounts:
        - name: shared-log-output
          mountPath: /usr/src/app/files
